# senyoshu

./: README.md
senyoshu-android/: .gitignore  settings.gradle
senyoshu-android/app/: build.gradle
senyoshu-android/app/src/androidTest/java/com/senyoshu/app/: ExampleInstrumentedTest.kt
senyoshu-android/app/src/main/: AndroidManifest.xml
senyoshu-android/app/src/main/assets/: acl.txt
senyoshu-android/app/src/main/java/com/senyoshu/app/: ExportToJavascript.kt  MainActivity.kt  Senyoshu.kt  SurfingActivity.kt  SurfingSelectActivity.kt  SurfingService.kt  (+1 more)
senyoshu-android/app/src/main/res/layout/: notification_save.xml
senyoshu-android/app/src/main/res/values/: strings.xml  themes.xml
senyoshu-android/gradle/: libs.versions.toml
senyoshu-android/gradle/wrapper/: gradle-wrapper.properties
senyoshu-rust/: .gitignore  Cargo.toml
senyoshu-rust/client/: Cargo.toml  Dioxus.toml  build.rs
senyoshu-rust/client/public/: main.css
senyoshu-rust/client/src/: file.rs  global.rs  imgs.rs  main.rs  native.rs  request.rs  router.rs  task.rs  text.rs  voice.rs  window.rs
senyoshu-rust/client/src/components/: button.rs  dialog.rs  lazy_list.rs  memory_buttons.rs  mod.rs  search.rs  sound.rs  viewer.rs  word_node.rs  word_preview.rs
senyoshu-rust/client/src/components/editor/: editor.rs  example_container.rs  example_sentence.rs  mean.rs  mean_container.rs  mod.rs  parts_of_speech.rs  set_parts_of_speech.rs  tones.rs  word_creator.rs
senyoshu-rust/client/src/i18n/: cn.rs  en.rs  ja.rs  mod.rs
senyoshu-rust/client/src/page/: about_page.rs  check_word_page.rs  collection_page.rs  create_word_page.rs  diff_page.rs  editor_page.rs  glossary_page.rs  home_page.rs  inspection_page.rs  kanji_list_page.rs  kanji_page.rs  knowledge_page.rs  login_page.rs  management_page.rs  mod.rs  setting_page.rs  voices_page.rs  word_page.rs
senyoshu-rust/client/src/page/learn/: kana.rs  kanji.rs  learn.rs  learn_page.rs  mod.rs  preview.rs  preview_knowledge.rs  txt.rs
senyoshu-rust/client/src/page/maintain/: deduplicate_page.rs  mod.rs  segment_page.rs
senyoshu-rust/client/src/singleton/: bottom_navigation.rs  confirm_box.rs  mod.rs  top_navigation.rs
senyoshu-rust/client/src/storage/: account.rs  backend.rs  dictionary.rs  mod.rs  permanent_storage.rs  setting.rs  use_storage.rs  voice_setting.rs  workbook.rs
senyoshu-rust/client/src/tts/: voice.rs
senyoshu-rust/common/: Cargo.toml
senyoshu-rust/common/assets/: data.json
senyoshu-rust/common/assets/embed/: kanji_alias.json  yomi.json
senyoshu-rust/common/assets/embed/kanji/: N2.txt  N3.txt  N4.txt
senyoshu-rust/common/assets/embed/word/: N1必修.txt  N1核心.txt  N1補充.txt  N2必修.txt  N2核心.txt  N3必修.txt  N3核心.txt  N4.txt  N5.txt  常用漢字表詞彙.txt
senyoshu-rust/common/src/: embed.rs  lib.rs
senyoshu-rust/common/src/glossary/: jo_yo_kan_ji.rs  kanjis.rs  mod.rs  words.rs
senyoshu-rust/common/src/test/: mod.rs  word_generator.rs
senyoshu-rust/common/src/types/: error.rs  integer.rs  json_value_template.rs  kanji_alias.rs  kanji_detail.rs  mod.rs  state.rs
senyoshu-rust/common/src/types/api/: account.rs  api.rs  dic.rs  learn.rs  mod.rs  session.rs
senyoshu-rust/common/src/types/learn/: knowledge.rs  learn_knowledge_history.rs  mod.rs  plan.rs
senyoshu-rust/common/src/types/sound/: mod.rs
senyoshu-rust/common/src/types/word/: mean_entry.rs  mod.rs  parts_of_speech.rs  tones.rs  wid.rs  word.rs  word_entry.rs
senyoshu-rust/common/src/util/: alias.rs  iter_util.rs  mod.rs  number.rs  passwd_hasher.rs  seq_map.rs  string_util.rs  time.rs
senyoshu-rust/native/: Cargo.toml
senyoshu-rust/native/src/: init.rs  lib.rs  surfing.rs  tun_device.rs
senyoshu-rust/server/: Cargo.toml
senyoshu-rust/server/src/: main.rs
senyoshu-rust/server/src/api/: get_surf_servers.rs  mod.rs
senyoshu-rust/server/src/api/account/: get_other_user_info.rs  login.rs  mod.rs  register.rs  update_passwd.rs  update_user_state.rs
senyoshu-rust/server/src/api/dic/: create_word.rs  delete_word.rs  get_change_request.rs  get_word_by_pid.rs  get_word_history.rs  mod.rs  post_word.rs  set_adopted.rs  sync_dic.rs  update_many.rs
senyoshu-rust/server/src/api/learn/: get_record.rs  mod.rs  post_record.rs
senyoshu-rust/server/src/database/: account.rs  database.rs  learn.rs  mod.rs
senyoshu-rust/server/src/database/dic/: mod.rs  sounds.rs  word_history.rs  words.rs
senyoshu-rust/server/src/database/model/: data_model.rs  learn_model.rs  mod.rs
(+1 files in other folders)
