[package]
name = "senyoshu-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "~0.12", default-features = false, features = ["json"] }
smallvec = { version = "~1.13", features = ["serde"] }
itertools = "~0.12"
serde = { version = "~1.0" }
serde_json = { version = "~1.0" }
async-std = "~1.12"
gloo = { version = "~0.11", default-features = false, features = ["storage"] }
js-sys = "~0.3"
web-sys = { version = "~0.3", features = [
    "AudioContext",
    "AudioBufferSourceNode",
    "AudioBuffer",
    "AudioDestinationNode",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "SpeechSynthesisVoice",
    "Navigator"
] }
#regex = "~1.10"
senyoshu-common = { path = "../common" }
dioxus = { version = "~0.5", features = ["web", "html", "router"] }
manganis = "~0.2"
chrono = "~0.4"
derive_more = { version = "~0.99" }
once_cell = "~1.19"
form_urlencoded = "~1.2"
serde_qs = "~0.13"
wasm-bindgen-futures = "~0.4"
futures = "~0.3"
dioxus-logger = "~0.5"
tracing = { version = "~0.1" }
dioxus-resize-observer = "~0.2"
dioxus-use-mounted = "~0.2"
base64 = "~0.22"
lz4_flex = "~0.11"
ciborium = "~0.2"

[features]
android = ["senyoshu-common/android"]

[build-dependencies]
blake2 = "~0.10"
serde = { version = "~1.0" }
serde_json = { version = "~1.0" }
chrono = "~0.4"