[package]
name = "senyoshu-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
#serde_with = "~3.6"
itertools = "~0.12"
derive_more = { version = "~0.99", default-features = false, features = ["deref", "deref_mut"] }
strum = { version = "~0.26", features = ["derive"] }
strum_macros = "~0.26"
gloo = { version = "~0.11", features = ["utils", "history"] }
web-sys = { version = "~0.3", features = ["Window"] }
serde_urlencoded = "~0.7"
sea-orm = { version = "~0.12" }
chrono = { version = "~0.4", features = ["serde"] }
form_urlencoded = "~1.2"
rust-embed = { version = "~8", features = ["debug-embed","compression"] }
once_cell = "~1.19"
smallvec = { version = "~1.13", features = ["serde"] }
blake2 = "~0.10"
hex = "~0.4"
reqwest = { version = "~0.12", default-features = false,features = ["charset","http2","rustls-tls","json"] }
#rhai = "~1.17"

[features]
android = []