[package]
name = "senyoshu-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "native"
path = "native.rs"

[lib]
crate_type = ["cdylib"]

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
uniffi = { version = "~0.27", features = ["cli"] }
shadowsocks-service = { version = "~1.18", features = ["local", "aead-cipher-2022"] }
tun2proxy = "=0.2.15"
ipnet = { version = "~2", features = ["serde"] }
futures = { version = "~0.3" }
once_cell = "~1.19"
tokio = { version = "~1", features = ["full"] }
tracing = "~0.1"
tracing-subscriber = "~0.3"
#ndk = "0.8.0"
android_logger = "0.13"
senyoshu-common = { path = "../common" }
chrono = { version = "~0.4", features = ["serde"] }
redb = "~2.1"
anyhow = "~1.0"
thiserror = "~1.0"
derive_more = { version = "~0.99", default-features = false, features = ["deref", "deref_mut"] }