[package]
name = "senyoshu-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0", features = ["raw_value"] }
smallvec = { version = "~1.13", features = ["serde"] }
once_cell = "~1.19"
itertools = "~0.12"
derive_more = { version = "~0.99" }
chrono = { version = "~0.4", features = ["serde"] }
senyoshu-common = { path = "../common" }
http = { version = "~1.1" }
tracing = { version = "~0.1" }
tracing-subscriber = { version = "~0.3", features = ["env-filter", "registry"] }
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { version = "~1.36", features = ["full"] }
axum = { version = "~0.7" }
tower = { version = "~0.4", features = ["full"] }
tower-http = { version = "~0.5", features = ["full"] }
blake2 = "~0.10"
hex = "~0.4"


